tests/fixtures/invalid/round_str.py
# Cannot call round() with Str
x = round("hello")
